2000-06-18  Arno W. Peters  <A.W.Peters@ieee.org>

	* AUTHORS, doc/ngspice.texi: Included an acknowledgements
	section.

2000-06-16  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/frontend/doplot.c: Refactored into the following files:
	src/frontend/com_asciiplot.c src/frontend/com_asciiplot.h
	src/frontend/com_hardcopy.c src/frontend/com_hardcopy.h
	src/frontend/com_plot.c src/frontend/com_plot.h
	src/frontend/com_xgraph.c src/frontend/com_xgraph.h
	src/frontend/plotting/plotit.c src/frontend/plotting/plotit.h

	* src/frontend/Makefile.am src/frontend/plotting/Makefile.am:
	Updated to match the new files.

2000-06-15  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/frontend/graphdb.c, src/frontend/graphdb.c,
	src/frontend/Makefile.am, src/frontend/plotting/graphdb.c,
	src/frontend/plotting/graphdb.c,
	src/frontend/plotting/Makefile.am: Moved plotting specific files
	into plotting directory.

2000-06-05  Arno W. Peters  <A.W.Peters@ieee.org>

	* tests/*: Added a little hierarchy to the tests.  Removed
	config.sh in favor of check.sh.  This script does all checking.
	Made names of the tests better reflect the circuit under test.

2000-06-03  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/include/complex.h, src/include/macros.h,
	src/include/memory.h, src/maths/sparse/spdefs.h: Moved definitions
	of complex into complex.h.  There are three different ways to
	declare a complex number in Spice.  We need further work to reduce
	this to only one.

	* src/maths/cmaths/Makefile.am, src/maths/cmaths/.cvsignore,
	src/maths/cmaths/test_cx_ph.c:  Added a new test and updated the
	corresponding support files.

2000-06-02  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/circuit/inp2dot.c: Refactoring introduced a bug in the line
	parsing.  Passing line as an extra parameter to the refactored
	functions fixes the bug.

2000-05-30  Arno W. Peters  <A.W.Peters@ieee.org>

	* TODO: Updated.

	* src/maths/cmaths/Makefile.am, src/maths/cmaths/test_cx_mag.c,